app/assets/styles/modules/_page-section.css
.page-section {
  position: relative;
  padding: 1.2rem 0;
  @mixin atMedium {
    padding: 6rem 0;
  }

  &--blue {
    color: #fff;
    background: $mainBlue;
  }

  &--grey {
    color: #fff;
    background: $mainGrey;
  }

  &--about {
    @mixin atMedium {
      color: #FFFFFF;
      padding-bottom: 0;
      background-color: $secondaryGrey;
      background-image: linear-gradient(
          to bottom,
          rgba(0, 0, 0, 0.3),
          rgba(0, 0, 0, 0.7)
        ),
        url("/assets/images/high-contrast-mountain.jpg");
      background-position: center;
      background-size: cover;
      background-repeat: no-repeat;
      background-attachment: fixed;
    }
  }

  &__custom-shape-divider {
    position: absolute;
    z-index: 1;
    top: calc(100% - 20px);
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
    transform: rotate(180deg);
  }

  &__custom-shape-divider svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 500px;
  }

  &__custom-shape-divider .shape-fill {
    fill: #ffffff;
  }
}

